Add proper gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 venv/
-*.pyc
+*.pkl
+*.DS_Store
+*.log
+*.csv
+*.ipynb_checkpoints
 __pycache__/
-*.so
-*.dylibvenv/
-*.dylib
-venv/
-venv/
-*.dylib
-*.so
-venv/
-*.dylib
-*.so
