--- a/flood_prediction_system/render.yaml
+++ b/flood_prediction_system/render.yaml
@@ -1,1 +1,7 @@
-
+services:
+  - type: web
+    name: flood-prediction-app
+    runtime: docker
+    port: 5000
+    env: production
+    plan: free
