--- a/flood_prediction_system/render-locust.yaml
+++ b/flood_prediction_system/render-locust.yaml
@@ -1,1 +1,7 @@
-
+services:
+  - type: worker
+    name: locust-worker
+    runtime: docker
+    env: docker
+    plan: free
+    dockerfile: Dockerfile.locust  # Create a minimal Locust-only Dockerfile
